<resources>
    <string name="app_name">Books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Books</string>
    <string name="menu_cleanup">Clean Up</string>
    <string name="add_book">Add a book</string>
    <string name="book_image_description">Book cover</string>
    <string name="default_id_value">0000</string>
    <string name="default_title_string">Title</string>
    <string name="default_author_string">Author</string>
    <string name="import_database">Import Database</string>
    <string name="search_title">Search</string>

    <string name="menu_settings">Settings</string>

    <string name="import_preferences_header">Import Options</string>
    <string name="import_preference_title">Import books…</string>
    <string name="glide_cache_cleared">Glide cache cleared.</string>

    <!-- Details fragment strings -->
    <string name="book_details">Book details</string>
    <string name="isbnLabel">"ISBN"</string>
    <string name="yearPublishedLabel">Year Published</string>
    <string name="numberOfPagesLabel">Pages</string>
    <string name="summaryLabel">Summary</string>
    <string name="physicalLocationLabel">Physical Location</string>
    <string name="publisherLabel">Publisher</string>
    <string name="languageLabel">Language</string>
    <string name="dateAddedLabel">Date Added</string>
    <string name="genreLabel">Genre</string>
    <string name="authorLabel">Author</string>
    <string name="detailsLabel">Details</string>
    <string name="save_book_title">Save</string>
    <string name="edit_book_title">Edit</string>
    <string name="location_filter">Location</string>
    <string name="genre_filter">Genre</string>
    <string name="author_filter">Author</string>
    <string name="language_filter">Author</string>

    <string name="select_histo_value">Select a value</string>
    <string name="publisher_filter">Publisher</string>
    <string name="cancel">Cancel</string>
    <string name="book_edit">Edit</string>
    <string name="titleLabel">Title</string>
    <string name="subtitleLabel">Sub-title</string>
    <string name="searchPrompt">Search&#8230;</string>
    <string name="search_enabled_field">Search this attribute.</string>
    <string name="item_count_format">%1$d matches.</string>
    <string name="book_count">%1$d Books</string>
    <string name="select_import_file_prompt">Select a file to import.</string>
    <string name="import_status">Imported %1$d books and %2$d images.</string>
    <string name="import_failed">Failed to import books (%1s$).</string>
    <string name="export_status">Exported %1$d books.</string>
    <string name="export_failed">Failed to export books (%1$s).</string>
    <string name="scan_failed">Scanner failed: %1$s.</string>
    <string name="scanned_invalid_isbn">%1$s is not a valid ISBN.</string>
    <string name="sort_by_date_added">Sort by date added.</string>
    <string name="sort_by_title">Sort by title.</string>
    <string name="lastModifiedLabel">Last modified</string>
    <string name="bookIdLabel">SQL Identifier</string>
    <string name="drag_to_re_order">Drag to re-order.</string>
    <string name="enter_text">Enter text…</string>
    <string name="enter_isbn">Enter ISBN…</string>
    <string name="export_preference_title">Export books&#8230;</string>
    <string name="book_pager_label">Export books&#8230;</string>
    <string name="add_scan">Scan</string>
    <string name="add_type">Type</string>
    <string name="add_isbn">ISBN</string>
    <string name="delete_book">Delete</string>
    <string name="book_deleted">%1$s deleted.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_book_confirmation">Delete "%1$s"?</string>
    <string name="duplicate_book_confirmation">%1$s has %2$d duplicates. Save anyways?</string>
    <string name="request_camera_permission">This feature requires access to the camera.</string>
    <string name="bind_camera_failed">Failed to turn camera on: %1$s</string>
    <string name="default_isbn_string">ISBN</string>
    <string name="no_match_found">No match found.</string>
    <string name="manual_input_required">Manual input is required for this book.</string>
    <string name="scan_status_matched">Matched</string>
    <string name="scan_status_error">Scan error.</string>
    <string name="scan_stat_message">%1$d lookups: %2$d matches (%3$d didn\'t match)</string>
    <string name="scan_books_added">Added %1$d books to your library.</string>
    <string name="preference_display_book_id">Display SQL book id?</string>
    <string name="preference_display_last_modified">Display last modified date?</string>
    <string name="preference_category_lookup_service">Lookup service</string>
    <string name="preference_category_display">Display</string>
    <string name="take_photo">Take Photo</string>
    <string name="pick_media">Pick Media</string>
    <string name="add_isbn_go_prompt">Go</string>
    <string name="duplicate_books_cleanup">%1$d books are potential duplicates</string>
    <string name="without_cover_books_cleanup">%1$d books without a cover image</string>
    <string name="without_authors_cleanup">%1$d books without an author</string>
    <string name="without_genres_cleanup">%1$d books without genres</string>
    <string name="without_locations_cleanup">%1$d books without physical location</string>
    <string name="without_languages_cleanup">%1$d books without a language tag</string>

    <string name="authors_cleanup">%1$d authors</string>
    <string name="genres_cleanup">%1$d genres</string>
    <string name="publishers_cleanup">%1$d publishers</string>
    <string name="languages_cleanup">%1$d languages</string>
    <string name="locations_cleanup">%1$d locations</string>
    <string name="labels_cleanup_header">Labels</string>

    <string name="merge_labels_prompt">Merge %1$s into %2$s?</string>
    <string name="delete_label_prompt">Delete label "%1$s"?</string>

    <string name="book_selected">Selected</string>
    <string name="book_selected_count">%1$d books selected</string>
    <string name="edit_multiple_books">Updating %1$d books</string>
    <string name="lookup_service_preference_prompt">Lookup Service</string>
    <string name="sort_order_preference_prompt">Default Sort Order</string>

    <string name="date_added_embedded">Added on %1$s.</string>
    <string name="preference_enable_shortcut_to_edit">Enable shortcut to edit in lists?</string>
    <string name="discard_changes_prompt">Discard changes?</string>
    <string name="edit_no_book_error">An error occurred, no book to edit.</string>

    <string name="check_for_broken_images">Check and fix broken book covers</string>
    <string name="check_gc_images">Delete unused images</string>
    <string name="cleanup_book_cover_section">Book covers</string>
    <string name="reset_preference_title">Reset database</string>
    <string name="reset_database_confirmation">This will remove all books, are you sure you want to proceed?</string>
    <string name="lookup_use_last_location_prompt">Use last physical location?</string>
    <string name="lookup_use_only_existing_genres_prompt">Import existing genres only?</string>
    <string name="scan_status_duplicate">Duplicate</string>
    <string name="preferences_lookup_service_stats">%1$d lookups, %2$d matches and %3$d covers.</string>

    <string name="scan_confirm_prompt">About to save %1$d of %2$d books</string>
    <string name="scan_confirm_duplicates">duplicate(s) will get saved.</string>
    <string name="scan_confirm_error">lookups errors.</string>
    <string name="scan_confirm_no_match">didn\'t match.</string>
    <string name="scan_proceed">Save %1$d books</string>

    <string name="apply">Apply</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="pager_position">%1$d of %2$d</string>
    <string name="sync_login">Log In</string>
    <string name="sync_do_sync">Sync</string>
    <string name="sync_log_out">Log Out</string>
    <string name="cleanup_check_image_progress_title">Checking images…</string>
    <string name="sync_dialog_progress_title">Sync in progress</string>
    <string name="sync_cancelled">Sync cancelled.</string>
    <string name="sync_failed">Sync failed, try again.</string>
    <string name="sync_success">Sync completed successfully.</string>
    <string name="exporting_images">Copying images…</string>
    <string name="backing_up_database">Backing up database…</string>
    <string name="ok">OK</string>
    <string name="lookup_book">Looking up the book…</string>
    <string name="edit_magic_missing_infos">Magic requires at least an ISBN or a title/author.</string>
    <string name="edit_no_match">No match found, no magic!</string>
    <string name="exporting_books">Exporting books…</string>
    <string name="deleting_database">Deleting existing database…</string>
    <string name="importing_images">Importing images…</string>
    <string name="importing_books">Importing books…</string>
    <string name="starting_importing">Importing books…</string>
    <string name="saving_changes">Saving changes…</string>
    <string name="loading_books">Loading books…</string>
    <string name="deleting_unused_images"><![CDATA[Deleting unused images&#8230;]]></string>
    <string name="listing_existing_images">Listing existing images</string>
    <string name="looking_up_isbn"><![CDATA[Looking up ISBN&#8230;]]></string>
    <string name="user_profile_image">User profile image.</string>
    <string name="last_synchronized">Last synchronized</string>
    <string name="google_drive">Google Drive</string>
    <string name="no_sync_available">No previous sync available.</string>
    <string name="sync_started">Sync started</string>
    <string name="sync_checking_root_directroy">Checking drive directory…</string>
    <string name="sync_fetching_remote_database">Fetching remote books…</string>
    <string name="syncing_images">Syncing images…</string>
    <string name="collecting_unused_images">Garbage collecting unused images…</string>
    <string name="cleanup_task_already_running">A cleanup task is running, try later.</string>
    <string name="worldcat_requires_wskey">A WSKEY is required for Worldcat.</string>

</resources>