<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <ImageView
        android:id="@+id/idUserPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_margin="10dp"
        android:contentDescription="@string/user_profile_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/idUserDisplayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/idUserPhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- A horizontal ruler -->
    <View
        android:layout_width="0dp"
        android:id="@+id/idProgressRuler"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="#AAAAAA"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idUserDisplayName"
        app:layout_constraintBottom_toTopOf="@id/idLastModifiedLabel" />


    <TextView
        android:id="@+id/idLastModifiedLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/last_synchronized"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/idUserDisplayName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/idLastSyncDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingBottom="50dp"
        android:gravity="top"

        app:layout_constraintTop_toBottomOf="@id/idLastModifiedLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/idSyncButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_do_sync"
        app:cornerRadius = "15dp"
        app:layout_constraintTop_toBottomOf="@id/idLastSyncDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/google_drive"
        android:contentDescription="@string/google_drive"

        app:layout_constraintTop_toBottomOf="@id/idSyncButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/idLogoutButton" />

    <Button
        android:id="@+id/idLogoutButton"
        android:text="@string/sync_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius = "15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>