<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/idDialogTitle"
        android:text="@string/select_histo_value"
        android:textSize="24sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/idCancelDialog"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/idCancelDialog"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_baseline_cancel_48"
        android:contentDescription="@string/cancel"
        android:layout_margin="8dp"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintStart_toEndOf="@id/idDialogTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/idDialogTitle"
        app:backgroundTint="#aaaaaa" />

    <EditText
        android:id="@+id/idAutoComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/searchPrompt"
        app:layout_constraintTop_toBottomOf="@id/idDialogTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        tools:listitem="@layout/search_dialog_item_layout"
        android:id="@+id/idHistoList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idAutoComplete"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>