<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <HorizontalScrollView
            android:id="@+id/idSearchFilters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/idCountView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layoutDirection="ltr"
                android:padding="3dp"
                android:gravity="center">

                <Button
                    android:id="@+id/idLocationFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_filter"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableTint="?attr/colorOnPrimary"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/idGenreFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_filter"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableTint="?attr/colorOnPrimary"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/idPublisherFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publisher_filter"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableTint="?attr/colorOnPrimary"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/idAuthorFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_filter"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableTint="?attr/colorOnPrimary"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/idLanguageFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_filter"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:drawableTint="?attr/colorOnPrimary"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/idCountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@id/list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idSearchFilters" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/recyclerview_book_item"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/idCountView" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabScanButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_book"
            android:src="@drawable/ic_baseline_add_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEditButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_book"
            android:src="@drawable/ic_baseline_mode_edit_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>